--- a/index.html
+++ b/index.html
@@ -1,12 +1,116 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+<meta charset="UTF-8">
+<title>Simple #15</title>
+<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <h1>first github page blog!</h1>
+
+<div id="controls">
+    <!-- <div class="card">
+        <div style="width:160px;height:220px;background:red;"></div>
+    </div> -->
+    <ul>
+        <li>
+            <img class="one" src="./img/01.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/02.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/03.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/04.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/05.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/06.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/07.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/08.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/09.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/10.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/11.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/12.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/13.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/14.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/15.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/16.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/17.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/18.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/19.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/20.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/21.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+        <li>
+            <img class="one" src="./img/22.jpg" alt="">
+            <img class="two" src="./img/23.jpg" alt="">
+        </li>
+    </ul>
+</div>
+
+<script src='js/p5.min.js'></script>
+<script src="js/index.js"></script>
+
+
+
+
 </body>
+
 </html>
