--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                   <i class="icon iconfont iconxiangmu1"></i>
               </div>
               <div class="title-issue">
-                <p class="mainTitle"><b>项目与工作经验</b></p>
+                <p class="mainTitle"><b>工作经历-1</b></p>
                 <p class="translation">EXPERIENCE</p>
               </div>
             </div>
@@ -262,7 +262,7 @@
                   <i class="icon iconfont iconxiangmu1"></i>
               </div>
               <div class="sub-title-issue">
-                  &emsp;大搜车&nbsp;前端工程师------2018.11 ~ 至今
+                  &emsp;大搜车&nbsp;前端工程师------2018.11 ~ 2019.07
               </div>
             </div>
             <!-- 内容 -->
@@ -300,8 +300,8 @@
                   <i class="icon iconfont iconbook"></i>
               </div>
               <div class="title-issue">
-                <p class="mainTitle"><b>个人笔记积累</b></p>
-                <p class="translation">NOTE</p>
+                <p class="mainTitle"><b>工作经历-2</b></p>
+                <p class="translation">EXPERIENCE</p>
               </div>
             </div>
             <!-- 子标题 -->
@@ -310,61 +310,36 @@
                   <i class="icon iconfont iconbook"></i>
               </div>
               <div class="sub-title-issue">
-                  &emsp;笔记
+                  &emsp;昆山华信&nbsp;前端工程师------2019.07 ~ 至今
               </div>
             </div>
             <!-- 内容 -->
             <div class="details">
-              <h3>前端笔记</h3>
+              <h3>项目开发</h3>
               <ul>
                 <li>
                   <i class="icon iconfont iconsetting"></i>
                   <span>
-                    如何编写可读性更高的代码<a href="https://note.youdao.com/ynoteshare1/index.html?id=b2523b3f25c5fa6b97730367812b9447&type=notebook">地址</a>
+                    参与三峡项目的开发和优化，负责大坝中心项目组的三峡监测模块的开发<br>
+                    技术栈：vue-nuxt，elementUI，lodash，webpack，axios等等
                   </span>
                 </li>
+                <br>
                 <li>
                   <i class="icon iconfont iconsetting"></i>
                   <span>
-                    大搜车工作笔记<a href="http://note.youdao.com/noteshare?id=e9dbb6afaf5be3fce7ffaefd9142f1e9">地址</a>
+                     参与新丰江项目，云峰项目，滩坑项目的监测模块的开发和代码迁移，重构的工作<br>
+                     技术栈：vue-nuxt，elementUI，lodash，webpack，d3chart，handsonTable，axios等等
                   </span>
                 </li>
+                <br>
                 <li>
                   <i class="icon iconfont iconsetting"></i>
                   <span>
-                    git操作笔记<a href="http://note.youdao.com/noteshare?id=f5fae68891691f4a69b8bdf51fd06af9">地址</a>
+                    参与了深圳福田区智慧水务项目的监测模块的开发<br>
+                    技术栈：vue，antDesignVue，axios，lodash，canvas的gis地图等等
                   </span>
-                </li>      
-                <li>
-                    <i class="icon iconfont iconsetting"></i>
-                    <span>
-                      正则表达式<a href="http://note.youdao.com/noteshare?id=7a0ed308317f92421d5b3b624b73c4ba">地址</a>
-                    </span>
-                </li>
-                <li>
-                    <i class="icon iconfont iconsetting"></i>
-                    <span>
-                      sass笔记<a href="http://note.youdao.com/noteshare?id=1e7f051cc66ad5044856cae2807298d3">地址</a>
-                    </span>
-                </li>        
-                <li>
-                    <i class="icon iconfont iconsetting"></i>
-                    <span>
-                      vue100问<a href="http://note.youdao.com/noteshare?id=cd4e636391479cb4d372499a7e0a3fa5">地址</a>
-                    </span>
-                </li>       
-                <li>
-                    <i class="icon iconfont iconsetting"></i>
-                    <span>
-                      webpack配置<a href="http://note.youdao.com/noteshare?id=53a629d365482cf31f51bf7bde20f389">地址</a>
-                    </span>
-                </li>   
-                <li>
-                    <i class="icon iconfont iconsetting"></i>
-                    <span>
-                      react笔记<a href="http://note.youdao.com/noteshare?id=390039f5e310619d39ea9f613a375eff">地址</a>
-                    </span>
-                </li>       
+                </li>                
               </ul>
             </div>
         </div>
